EM-6779 fix code smells-1